add pop for all master tables

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     
     {% block gallerycss %}{% endblock %}
       
-    <title>New Door {% block title %}{% endblock title %}</title>
+    <title>New Door | {% block title %}{% endblock title %}</title>
   </head>
 
   <body>
