--- a/templates/new_door/property_all_overview.html
+++ b/templates/new_door/property_all_overview.html
@@ -279,7 +279,7 @@
                 </div>
               </div>
             </div>
-              {% endfor %} {% else %} NoData {% endif %}
+              {% endfor %} {% else %} <tr class="text-center"><td colspan="7">No Unit</td></tr>  {% endif %}
             </tbody>
           </table>
         </div>
