--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -280,7 +280,7 @@
                 </div>
               </div>
             </div>
-              {% endfor %} {% else %} NoData {% endif %}
+              {% endfor %} {% else %} <tr class="text-center"><td colspan="7">No Property</td></tr>  {% endif %}
             </tbody>
           </table>
         </div>
