--- a/templates/new_door/add_documents_type.html
+++ b/templates/new_door/add_documents_type.html
@@ -36,7 +36,6 @@
 {% comment %} Main form send here {% endcomment %}
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card">
                         <div class="card-header card-header-primary card-header-icon">
                             <h4 class="card-title">Documents Type Overview</h4>
                         </div>
@@ -75,7 +74,8 @@
                                                 </a>
                                                
 
-                                                <a href="{% url 'delete_doc_type' doc.pk %} " class="d-inline" title="Delete document type">
+                                                <a href="#" class="d-inline" title="Delete document type" data-target="#deleteToggle"
+                                                data-toggle="modal">
                                                     
                                                     <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
                                                     <div class="ripple-container"></div>
@@ -83,14 +83,31 @@
                                                 
                                             </td>
                                         </tr>
-                                        {% endfor %} {% else %} NoData {% endif %}
+                                        <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-top" role="document">
+                                              <div class="modal-content">
+                                                <div class="modal-header">
+                                                  <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                                                  <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                  </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                  Are you sure you want to delete documents type {{ doc.docs_type }}?
+                                                </div>
+                                                <div class="modal-footer">
+                                                  <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                                                  <a href="{% url 'delete_doc_type' doc.pk %}" type="button" class="btn btn-danger">Yes</a>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                          {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Document Type</td></tr> {% endif %}
                                     </tbody>
                                 </table>
                             </div>
                         </div>
-                        <!-- end content-->
-                    </div>
-                    <!--  end card  -->
+
                 </div>
                 <!-- end col-md-12 -->
             </div>
