--- a/templates/new_door/add_ownership_type.html
+++ b/templates/new_door/add_ownership_type.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Ownership_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Ownership Type {% endblock title %} {% block body %} {% load static %}
 <div class="col-md-12">
     <form id="TypeValidation" class="form-horizontal" action=" " method="post" novalidate="novalidate" enctype="multipart/form-data">
         {% csrf_token %}
@@ -34,7 +34,6 @@
 {% comment %} Main form send here {% endcomment %}
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card">
                         <div class="card-header card-header-primary card-header-icon">
                             <h4 class="card-title">Ownership Type Overview</h4>
                         </div>
@@ -61,34 +60,47 @@
                                             <td>{{ownership_type.desc}}</td>
                                             <td class="text-right">
 
-                                                <a href=" {% url 'view_ownership_type' ownership_type.id %} " class="d-inline " rel="tooltip " data-original-title="Remove ">{% csrf_token %}
-                                                <div class="ripple-container success "></div>
-                                                <i class="material-icons " style="margin-right: 10px; margin-top: 10px; margin-bottom: 20px; color: #ff9800;" >dvr</i>
+                                                <a href=" {% url 'view_ownership_type' ownership_type.id %} " class="d-inline ">
+                                                    <i class="material-icons " style="margin-right: 10px; margin-top: 10px; margin-bottom: 20px; color: #ff9800;" >dvr</i>
                                                 </a>
                                               
 
                                                 <a href=" {% url 'update_ownership_type' ownership_type.pk %}" class="d-inline ">{% csrf_token %}
-                                                    <div class="ripple-container success "></div>
                                                     <i class="material-icons "  style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #4caf50; ">create</i>
                                                 </a>
                                                
 
-                                                <a href="{% url 'delete_ownership_type' ownership_type.pk %} " class="d-inline ">
-                                                   
+                                                <a href="#" class="d-inline " data-toggle="modal" data-target="#deleteToggle">
                                                     <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
-                                                    <div class="ripple-container"></div>
                                                 </a>
                                                 
                                             </td>
                                         </tr>
-                                        {% endfor %} {% else %} NoData {% endif %}
+                                        <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-top" role="document">
+                                              <div class="modal-content">
+                                                <div class="modal-header">
+                                                  <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                                                  <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                  </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                  Are you sure you want to delete ownership type {{ ownership_type.ownership_type }}?
+                                                </div>
+                                                <div class="modal-footer">
+                                                  <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                                                  <a href="{% url 'delete_ownership_type' ownership_type.pk %} " type="button" class="btn btn-danger">Yes</a>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                          {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Ownership Type</td></tr> {% endif %}
                                     </tbody>
                                 </table>
                             </div>
                         </div>
                         <!-- end content-->
-                    </div>
-                    <!--  end card  -->
                 </div>
                 <!-- end col-md-12 -->
             </div>
