--- a/templates/new_door/add_payment_mode.html
+++ b/templates/new_door/add_payment_mode.html
@@ -58,7 +58,6 @@
       {% comment %} Main form send here {% endcomment %}
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
             <div class="card-header card-header-primary card-header-icon">
               <h4 class="card-title">Payment Mode Type Overview</h4>
             </div>
@@ -127,9 +126,10 @@
                         </a>
 
                         <a
-                          href=" {% url 'delete_payment_mode' payment_mode.pk %}"
+                          href="#"
                           class="d-inline"
                           title="Delete payment mode"
+                          data-toggle="modal" data-target="#deleteToggle"
                         >
                           <i
                             class="material-icons"
@@ -145,14 +145,31 @@
                         </a>
                       </td>
                     </tr>
-                    {% endfor %} {% else %} NoData {% endif %}
+                    <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-top" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                            <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            Are you sure you want to delete payment mode of type {{ payment_mode.pay_type }}?
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                            <a href="{% url 'delete_payment_mode' payment_mode.pk %}" type="button" class="btn btn-danger">Yes</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Payment Mode Type</td></tr> {% endif %}
                   </tbody>
                 </table>
               </div>
             </div>
             <!-- end content-->
-          </div>
-          <!--  end card  -->
         </div>
         <!-- end col-md-12 -->
       </div>
