--- a/templates/new_door/add_status_request.html
+++ b/templates/new_door/add_status_request.html
@@ -55,25 +55,10 @@
         </button>
         <br />
       </div>
-      <hr
-        style="
-          width: 1000px;
-          border-left-width: 35‒;
-          height: 0px;
-          margin: 0px;
-          margin-right: -20px;
-          margin-left: 0px;
-          font-weight: bold;
-          margin-top: 1rem;
-          margin-bottom: 1rem;
-          border: 0;
-          border-top: 5px solid rgba(0, 0, 0, 0.1);
-        "
-      />
+      
       {% comment %} Main form send here {% endcomment %}
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
             <div class="card-header card-header-primary card-header-icon">
               <h4 class="card-title">Status Request Type Overview</h4>
             </div>
@@ -143,9 +128,10 @@
                         </a>
 
                         <a
-                          href=" {% url 'delete_status_request' status.pk %}"
+                          href="#"
                           class="d-inline"
                           title="Delete status request"
+                          data-toggle="modal" data-target="#deleteToggle"
                         >
                           <i
                             class="material-icons"
@@ -155,21 +141,39 @@
                               margin-bottom: 20px;
                               color: #f44336;
                             "
+                            data-toggle="modal" data-target="#deleteToggle"
                             >delete</i
                           >
                           <div class="ripple-container"></div>
                         </a>
                       </td>
                     </tr>
-                    {% endfor %} {% else %} NoData {% endif %}
+                    <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-top" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                            <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            Are you sure you want to delete status request of type {{status.str_req }}?
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                            <a href="{% url 'delete_status_request' status.pk %}" type="button" class="btn btn-danger">Yes</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Status Request Type</td></tr> {% endif %}
                   </tbody>
                 </table>
               </div>
             </div>
             <!-- end content-->
           </div>
-          <!--  end card  -->
-        </div>
         <!-- end col-md-12 -->
       </div>
     </div>
