--- a/templates/new_door/add_tenant_request.html
+++ b/templates/new_door/add_tenant_request.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Tenant_Request_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Tenant Request Type {% endblock title %} {% block body %} {% load static %}
 <div class="col-md-12">
     <form id="TypeValidation" class="form-horizontal" method="post" novalidate="novalidate">
         {% csrf_token %}
@@ -36,7 +36,6 @@
             {% comment %} Main form send here {% endcomment %}
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card">
                         <div class="card-header card-header-primary card-header-icon">
                             <h4 class="card-title">Tenant Request Type Overview</h4>
                         </div>
@@ -63,33 +62,49 @@
                                             <td>{{tenant_request.desc}}</td>
                                             <td class="text-right">
 
-                                                <a href="{% url 'view_tenant_request' tenant_request.pk %}"  class="d-inline " rel="tooltip " title="View tenant request" data-original-title="Remove ">
-                                                <div class="ripple-container success "></div>
+                                                <a href="{% url 'view_tenant_request' tenant_request.pk %}"  class="d-inline "title="View tenant request">
                                                 <i class="material-icons " style="margin-right: 10px; margin-top: 10px; margin-bottom: 20px; color: #ff9800;" >dvr</i>
                                                 </a>
 
 
                                                 <a href="{% url 'update_tenant_request' tenant_request.pk %}"  class="d-inline" title="Update tenant request">
-                                                    <div class="ripple-container success "></div>
+   
                                                     <i class="material-icons "  style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #4caf50; ">create</i>
                                                 </a>
 
 
-                                                <a href="{% url 'delete_tenant_request' tenant_request.pk %}" class="d-inline" title="Delete tenant request">
+                                                <a href="#" class="d-inline" title="Delete tenant request" data-toggle="modal" data-target="#deleteToggle">
                                                     <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
-                                                    <div class="ripple-container"></div>
+
                                                 </a>
 
                                             </td>
                                         </tr>
-                                        {% endfor %} {% else %} NoData {% endif %}
+                                        <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-top" role="document">
+                                              <div class="modal-content">
+                                                <div class="modal-header">
+                                                  <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                                                  <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                  </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                  Are you sure you want to delete status request of type {{ tenant_request.tenant_req_type }}?
+                                                </div>
+                                                <div class="modal-footer">
+                                                  <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                                                  <a href="{% url 'delete_tenant_request' tenant_request.pk %}" type="button" class="btn btn-danger">Yes</a>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                          {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Tenant Request Type</td></tr> {% endif %}
                                     </tbody>
                                 </table>
                             </div>
                         </div>
                         <!-- end content-->
-                    </div>
-                    <!--  end card  -->
                 </div>
                 <!-- end col-md-12 -->
             </div>
