--- a/templates/new_door/property_type.html
+++ b/templates/new_door/property_type.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Property_Type {% endblock title %}
+{% extends 'base.html' %} {% block title %} Property Type {% endblock title %}
 {% block body %} {% load static %}
 <div class="col-md-12">
   <form
@@ -72,18 +72,10 @@
         </button>
         <br />
       </div>
-      <hr
-        style="
-          width: 100%;
-          font-weight: bold;
-          margin-top: 1rem;
-          border-top: 5px solid rgba(145, 145, 145, 0.1);
-        "
-      />
+
       {% comment %} Main form send here {% endcomment %}
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
             <div class="card-header card-header-primary card-header-icon">
               <h4 class="card-title">Property Type Overview</h4>
             </div>
@@ -156,7 +148,7 @@
                         </a>
 
                         <a
-                          href="{% url 'delete_property_type' property_type.pk  %} "
+                          href="#"
                           title="Delete property type"
                           class="d-inline"
                         >
@@ -175,14 +167,30 @@
                         </a>
                       </td>
                     </tr>
-                    {% endfor %} {% else %} NoData {% endif %}
+                    <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-top" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                            <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            Are you sure you want to delete property type {{ property_type.property_type }}?
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                            <a href="{% url 'delete_property_type' property_type.pk  %}" type="button" class="btn btn-danger">Yes</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %} {% else %} <tr class="text-center"><td colspan="5">No Property Type</td></tr> {% endif %}
                   </tbody>
                 </table>
               </div>
             </div>
-            <!-- end content-->
-          </div>
-          <!--  end card  -->
         </div>
         <!-- end col-md-12 -->
       </div>
