add pop for all master tables

--- a/templates/new_door/property_type.html
+++ b/templates/new_door/property_type.html
@@ -116,7 +116,6 @@
                           data-original-title="Remove "
                           title="View property type"
                           >{% csrf_token %}
-                          <div class="ripple-container success"></div>
                           <i
                             class="material-icons"
                             style="
@@ -134,7 +133,6 @@
                          title="Update property type"
                           class="d-inline"
                           >
-                          <div class="ripple-container success"></div>
                           <i
                             class="material-icons"
                             style="
@@ -151,6 +149,7 @@
                           href="#"
                           title="Delete property type"
                           class="d-inline"
+                          data-toggle="modal" data-target="#deleteToggle"
                         >
                     
                           <i
@@ -163,7 +162,6 @@
                             "
                             >delete</i
                           >
-                          <div class="ripple-container"></div>
                         </a>
                       </td>
                     </tr>
