--- a/templates/new_door/property_unit_overview.html
+++ b/templates/new_door/property_unit_overview.html
@@ -263,23 +263,25 @@
                 >
               </a>
 
+              {% if unit.tenantcontract.tenant.user.username %}
               <a
-              href="{% url 'review_documents' unit.tenantcontract.tenant.user.username %} "
-              class="d-inline delete-item"
-              title="View contract"
-            >
-              <i
-                class="material-icons"
-                style="
-                  margin-right: 5px;
-                  margin-top: 10px;
-                  margin-bottom: 20px;
-                  color: #0e352b;
-                "
-                >description</i
+                href="{% url 'review_documents' unit.tenantcontract.tenant.user.username %} "
+                class="d-inline delete-item"
+                title="View contract"
               >
-              <div class="ripple-container"></div>
-            </a>
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 5px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #0e352b;
+                  "
+                  >description</i
+                >
+                <div class="ripple-container"></div>
+              </a>
+            {% endif %}
 
               {% if request.user.is_superuser %}
               <a
