--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -1459,24 +1459,21 @@
         <h4 class="card-title">Notification</h4>
       </div>
       <div class="card-body">
-        <div class="mgs d-flex mt-2">
-          <i class="material-icons pr-2 text-danger"> feedback </i>
-          <a href="" class="link text-danger"
-            >Patrick has made a Payment go ahead and generate a contract
-          </a>
-        </div>
-        <div class="mgs d-flex mt-2">
-          <i class="material-icons pr-2 text-danger"> feedback </i>
-          <a href="" class="link text-danger"
-            >Patrick has made a Payment go ahead and generate a contract
-          </a>
-        </div>
-        <div class="mgs d-flex mt-2">
-          <i class="material-icons pr-2 text-danger"> feedback </i>
-          <a href="" class="link text-danger"
-            >Patrick has made a Payment go ahead and generate a contract
-          </a>
-        </div>
+        {% if units %} 
+          {% for unit in units %} 
+            {% if unit.occupancy_type.occupancy_type.lower == 'create contract' %}
+              <div class="mgs d-flex mt-2">
+                <i class="material-icons pr-2 text-danger"> feedback </i>
+                <a href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}" style="font-weight: 600;" class="link text-dark"
+                  >A Contract needs to be created for unit flat <span class="text-success">{{unit.flat}}</span>
+                </a>
+              </div>
+            {% else %}
+              <p class="text-center" style="font-weight: 600;">No notifications</p>
+            {% endif %}
+             
+          {% endfor %} 
+        {% endif %} 
       </div>
       <!-- end content-->
     </div>
