--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -1466,19 +1466,23 @@
       </div>
       <div class="card-body">
         {% if units %} 
-          {% for unit in units %} 
-            {% if unit.occupancy_type.occupancy_type.lower == 'create contract' %}
-              <div class="mgs d-flex mt-2">
-                <i class="material-icons pr-2 text-danger"> feedback </i>
-                <a href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}" style="font-weight: 600;" class="link text-dark"
-                  >A Contract needs to be created for unit flat <span class="text-success">{{unit.flat}}</span>
-                </a>
-              </div>
+          {% if unit.tenantcontract.tenant.user.username %}
+            {% for unit in units %} 
+              {% if unit.occupancy_type.occupancy_type.lower == 'create contract' %}
+                <div class="mgs d-flex mt-2">
+                  <i class="material-icons pr-2 text-danger"> feedback </i>
+                  <a href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}" style="font-weight: 600;" class="link text-dark"
+                    >A Contract needs to be created for unit flat <span class="text-success">{{unit.flat}}</span>
+                  </a>
+                </div>
+              {% else %}
+                <p class="text-center" style="font-weight: 600;">No notifications</p>
+              {% endif %}
+              
+            {% endfor %}
             {% else %}
-              <p class="text-center" style="font-weight: 600;">No notifications</p>
-            {% endif %}
-             
-          {% endfor %} 
+            <p class="text-center" style="font-weight: 600;">No notifications</p> 
+          {% endif %}
         {% endif %} 
       </div>
       <!-- end content-->
