--- a/templates/new_door/dashboard.html
+++ b/templates/new_door/dashboard.html
@@ -1441,7 +1441,7 @@
                       
                  
                     {% else %}
-                    <tr class="text-center"><td colspan="5">No payments yet</td></tr>
+                    <tr class="text-center"><td colspan="6">No payments yet</td></tr>
                     {% endif %}
                       
                     
@@ -1471,7 +1471,7 @@
               {% if unit.occupancy_type.occupancy_type.lower == 'create contract' %}
                 <div class="mgs d-flex mt-2">
                   <i class="material-icons pr-2 text-danger"> feedback </i>
-                  <a href="" style="font-weight: 600;" class="link text-dark"
+                  <a href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}" style="font-weight: 600;" class="link text-dark"
                     >A Contract needs to be created for unit flat <span class="text-success">{{unit.flat}}</span>
                   </a>
                 </div>
