--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -19,7 +19,7 @@
               {% elif total_earning.amount == None%}
                 $0
               {% elif not total_earning.amount == 0 %}
-                ${{ total_earning.amount|intcomma }}12
+                ${{ total_earning.amount|intcomma }}
               {% else %}
                 $0
               {% endif %} 
