fix due amount on tenant dashboard

--- a/templates/new_door/property_unit_overview.html
+++ b/templates/new_door/property_unit_overview.html
@@ -120,7 +120,7 @@
         >
         <thead>
           <tr>
-            <th>Unit No</th>
+            <th>Unit Flat</th>
             <th>Type</th>
             <th>Occupancy</th>
             <th>Tenant</th>
