--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -176,7 +176,7 @@
                 </button>
                 {% endif %}
               </td>
-              <td>{{ unit.tenantcontract.tenant.user.get_fullname.capitalize }}</td>
+              <td>{{ unit.tenantcontract.tenant.user.get_full_name.capitalize }}</td>
               <td>${{ unit.rent_amount|intcomma }}</td>
               <td class="amount">
                 {% if unit.tenantcontract.payment_set.all %}
