--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -142,7 +142,11 @@
               <tr>
                 <td>{{ property.owner_name }}</td>
                 <td>{{ property.property_name }}</td>
-                <td><b>$</b>676,576.7-demo</td>
+                <td>
+                {% if property.unit_set.count %}
+                  {{property.unit_set.count}}
+                {% endif %}
+                    </td>
                 <td><b>$</b>235,767-demo</td>
                 <td class="text-center">{{ property.unit_set.all.count }}</td>
                 <td>
